--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ black = "^23.3.0"
 pylint = "^2.17.4"
 ruff = "^0.0.270"
 mypy = "^1.3.0"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
