chore: add ruff config to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,11 @@ no_implicit_reexport = true
 # for strict mypy: (this is the tricky one :-))
 disallow_untyped_defs = true
 
+[tool.ruff]
+select = ["E","F","W","N","D","B","C90"]
+ignore = ["E501"]
+
+
 [tool.pydantic-mypy]
 init_forbid_extra = true
 init_typed = true
