--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.96.0"
 uvicorn = "^0.22.0"
-pydantic = {extras = ["email"], version = "^1.10.9"}
+pydantic = {extras = ["dotenv", "email"], version = "^1.10.9"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
