--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = {extras = ["dotenv", "email"], version = "^1.10.9"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.6"
+sqlalchemy = "^2.0.16"
 
 [tool.mypy]
 plugins = ["pydantic.mypy"]
