--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-fastapi = "^0.110.0"
+fastapi = {extras = ["standard"], version = "^0.115.3"}
 uvicorn = "^0.22.0"
 pydantic = {extras = ["dotenv", "email"], version = "^1.10.9"}
-python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+python-jose = {extras = ["criptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.7"
 sqlalchemy = "^2.0.16"
